k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stealth-messaging
  labels:
    app.kubernetes.io/name: stealth-messaging
