k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stealth-messaging
  namespace: stealth-messaging
  labels:
    app: stealth-messaging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: stealth-messaging
